# frankclaw

./: AUDIT_PLAN.md  CHANNEL_SETUP.md  CLAUDE.md  Cargo.toml  FEATURE_PLANS.md  PARITY_TODO.md  README.md  frankclaw.toml.example
crates/frankclaw-channels/: Cargo.toml
crates/frankclaw-channels/src/: discord.rs  fixture_discord_message_create_with_attachment.json  fixture_slack_event_message_with_file.json  fixture_whatsapp_media_webhook.json  inbound_media.rs  lib.rs  signal.rs  slack.rs  web.rs  whatsapp.rs
crates/frankclaw-cli/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  pt-PT.yml
crates/frankclaw-cli/src/: main.rs  repl.rs  terminal.rs
crates/frankclaw-core/: Cargo.toml
crates/frankclaw-core/src/: channel.rs  config.rs  media.rs  model.rs  types.rs
crates/frankclaw-crypto/src/: encryption.rs  token.rs
crates/frankclaw-gateway/: Cargo.toml
crates/frankclaw-gateway/src/: acp.rs  canvas.rs  delivery.rs  health_monitor.rs  lib.rs  methods.rs  openai_api.rs  rate_limit.rs  server.rs  tunnel.rs  ui.rs  webhooks.rs  ws.rs
crates/frankclaw-media/: Cargo.toml
crates/frankclaw-media/src/: lib.rs  store.rs  understanding.rs
crates/frankclaw-models/: Cargo.toml
crates/frankclaw-models/src/: anthropic.rs  cache.rs  catalog.rs  circuit_breaker.rs  copilot.rs  cost_guard.rs  costs.rs  lib.rs  openai_compat.rs  retry.rs  routing.rs
crates/frankclaw-models/tests/: integration.rs  smoke.rs
crates/frankclaw-models/tests/common/: mod.rs
crates/frankclaw-runtime/: Cargo.toml
crates/frankclaw-runtime/prompts/: agent_channel.md
crates/frankclaw-runtime/src/: context.rs  lib.rs  prompts.rs  sanitize.rs  subagent.rs
crates/frankclaw-tools/: Cargo.toml
crates/frankclaw-tools/src/: aria.rs  bash.rs  lib.rs
crates/frankclaw-tools/src/mcp/: mod.rs  protocol.rs
docs/: OPENCLAW_REMAINING.md  PARITY_TODO.md
docs/golang-port/: 01-ARCHITECTURE-OVERVIEW.md  02-CORE-TYPES.md  03-AGENTIC-LOOP.md  04-TOOL-SYSTEM.md  05-MODEL-PROVIDERS.md  06-MEMORY-SHORT-TERM.md  07-MEMORY-MEDIUM-TERM.md  08-MEMORY-LONG-TERM.md  09-SUBAGENT-ORCHESTRATION.md  10-SECURITY-CRYPTO.md  11-SMART-ROUTING-COSTS.md  12-HOOKS-EVENTS.md
