[package]
name = "frankclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
frankclaw-crypto = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
