[package]
name = "frankclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytesize = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
