[package]
name = "frankclaw-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
frankclaw-crypto = { workspace = true }
frankclaw-channels = { workspace = true }
frankclaw-cron = { workspace = true }
frankclaw-runtime = { workspace = true }
frankclaw-sessions = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
