[package]
name = "frankclaw-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
frankclaw-crypto = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
