[package]
name = "frankclaw-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
