[package]
name = "frankclaw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
frankclaw-models = { workspace = true }
frankclaw-sessions = { workspace = true }
frankclaw-tools = { workspace = true }
frankclaw-plugin-sdk = { workspace = true }
frankclaw-media = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
