[package]
name = "frankclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frankclaw-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
html2text = { workspace = true }
pdf-extract = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
rstest = { workspace = true }
